syntax = "proto3";

package crudechain.crudechain;

import "amino/amino.proto";
import "gogoproto/gogo.proto";
import "google/api/annotations.proto";
import "cosmos/base/query/v1beta1/pagination.proto";
import "crudechain/crudechain/params.proto";
import "crudechain/crudechain/crudeblock.proto";

option go_package = "crudechain/x/crudechain/types";

// Query defines the gRPC querier service.
service Query {
  
  // Parameters queries the parameters of the module.
  rpc Params (QueryParamsRequest) returns (QueryParamsResponse) {
    option (google.api.http).get = "/crudechain/crudechain/params";
  
  }
  
  // Queries a list of Crudeblock items.
  rpc Crudeblock    (QueryGetCrudeblockRequest) returns (QueryGetCrudeblockResponse) {
    option (google.api.http).get = "/crudechain/crudechain/crudeblock/{id}";
  
  }
  rpc CrudeblockAll (QueryAllCrudeblockRequest) returns (QueryAllCrudeblockResponse) {
    option (google.api.http).get = "/crudechain/crudechain/crudeblock";
  
  }
}
// QueryParamsRequest is request type for the Query/Params RPC method.
message QueryParamsRequest {}

// QueryParamsResponse is response type for the Query/Params RPC method.
message QueryParamsResponse {
  
  // params holds all the parameters of this module.
  Params params = 1 [(gogoproto.nullable) = false, (amino.dont_omitempty) = true];
}

message QueryGetCrudeblockRequest {
  uint64 id = 1;
}

message QueryGetCrudeblockResponse {
  Crudeblock Crudeblock = 1 [(gogoproto.nullable) = false];
}

message QueryAllCrudeblockRequest {
  cosmos.base.query.v1beta1.PageRequest pagination = 1;
}

message QueryAllCrudeblockResponse {
  repeated Crudeblock                             Crudeblock = 1 [(gogoproto.nullable) = false];
           cosmos.base.query.v1beta1.PageResponse pagination = 2;
}

